# z-xbot

./: Cargo.toml  README.md  railway.toml
src/: config.rs  main.rs  twitter.rs
src/debate/: mod.rs
src/generators/: mod.rs
src/knowledge/: mod.rs
src/llm/: mod.rs
src/responder/: mod.rs
src/scout/: mod.rs
src/templates/: mod.rs
