[package]
name = "zeroic-xbot"
version = "0.1.0"
edition = "2021"
authors = ["ZeroicAI <devzeroicai@gmail.com>"]

[dependencies]
# ZeroicAI framework
z-core = { git = "https://github.com/ZeroicAI/z-core", branch = "main" }
z-cognition = { git = "https://github.com/ZeroicAI/z-cognition", branch = "main" }

# Twitter API v2 with manual OAuth 1.0a
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# OAuth 1.0a signing
hmac = "0.12"
sha1 = "0.10"
base64 = "0.21"
percent-encoding = "2.3"

# Time for timestamps
chrono = "0.4"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-cron-scheduler = "0.10"

# Random generation
rand = "0.8"

# Environment variables
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
toml = "0.8"

[dev-dependencies]
tokio-test = "0.4"
